Add version 2 to vercel.json for proper serverless deployment

--- a/new project/backend/package.json
+++ b/new project/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'Build complete'",
+    "build": "echo 'No build required for serverless functions'",
     "dev": "nodemon server.js",
     "seed:admin": "node seedAdmin.js"
   },
