--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-PORT=5000
 MONGO_URI=your_mongodb_connection_string
 JWT_SECRET=your_jwt_secret_key
-FRONTEND_URL=https://your-frontend-domain.vercel.app
+FRONTEND_URL=http://localhost:3001
+PORT=5000
